--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:export": "node scripts/run-db-export.js",
+    "db:import": "node scripts/run-db-import.js",
+    "db:schema": "node scripts/run-schema-sql.js",
+    "db:reset-sequences": "node scripts/run-sequence-reset.js",
+    "db:dump": "node scripts/run-db-dump.js",
+    "db:check": "node scripts/run-db-check.js"
   },
   "dependencies": {
     "@axe-core/react": "^4.10.1",
